--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -607,6 +607,9 @@
 }
 
 @media (max-width: 768px) {
+  .header-title{
+    margin: 18rem 0 1.5rem 0px !important;
+  }
   .graduation-script {
     font-size: 2.3rem;
   }
@@ -621,7 +624,7 @@
 @media (max-width: 480px) {
 
   .header-title{
-    margin: 18rem 0 1.5rem 0px;
+    margin: 14.5rem 0 1.5rem 0px !important;
   }
   .graduation-script {
     font-size: 1.8rem;
